--- a/styles/main.scss
+++ b/styles/main.scss
@@ -22,16 +22,18 @@
   @extend .no-border;
 }
 
-.navbar-collapse[aria-expanded="true"] {
-  background-color: $transparent-black;
+@media only screen and (max-width: 767px) {
+  .navbar-collapse[aria-expanded="true"] {
+    background-color: $transparent-black;
 
-  input {
-    width: 300px;
-  }
+    input {
+      width: 300px;
+    }
 
-  #tweets {
-    width: 100%;
-    height: 200px;
+    #tweets {
+      width: 100%;
+      height: 200px;
+    }
   }
 }
 
